--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,186 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family: 'poppin', sans-serif;
+    width: 95%;
+    margin: 0 auto;
+    height: 100vh;
+    background-color: rgb(31, 21, 37);
+}
+
+img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
+}
+
+.App {
+    position: relative;
+}
+
+.formPage, .profilePage {
+    background-color: rgb(31, 21, 37);
+    color: aliceblue;
+    padding: 9%;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    min-height: 100%;
+    gap: 20px;
+    /* position: absolute; */
+    display: block;
+}
+
+header p {
+    font-size: 1.1rem;
+    height: 20%;
+    margin-bottom: 6%;
+}
+
+form {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.inputText, textarea {
+    border: 1px solid whitesmoke;
+    background-color: rgb(31, 21, 37);
+    width: 100%;
+    height: 3rem;
+    color: aliceblue;
+    font-size: 0.9rem;
+    padding: 10px;
+    margin-top: 5px;
+}
+
+div textarea {
+    width: 100%;
+    height: 7rem;
+}
+
+.checkBox {
+    display: flex;
+    gap: 15px;
+    align-items: self-start;
+    padding-top: 2px;
+}
+
+.checkBox input {
+    border: 1px solid whitesmoke;
+    background-color: rgb(31, 21, 37);
+    height: 20px;
+    width: 20px;
+}
+
+button {
+    height: 3rem;
+    width: 100%;
+    font-weight: 600;
+    border: none;
+    font-size: 1.2rem;
+}
+
+button:hover, button:focus {
+    color: aliceblue;
+    background-color: black;
+}
+
+.passwordMsg {
+    font-size: 0.75rem;
+}
+
+/* DESIGN FOR PROFILE */
+
+i {
+    color: aliceblue;
+    font-size: 300px;
+}
+
+i:hover, i:focus {
+    color: burlywood;
+}
+
+.profile-links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.aTags, .profileSkills {
+    display: flex;
+    gap: 15px;
+}
+
+.aTags a, .skills {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    background: rgb(180, 60, 60);
+    padding: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+.about p {
+    font-size: 15px;
+}
+
+.selfProfile {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.selfProfile span {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.about h4 {
+    padding: 10px;
+    color: azure;
+}
+
+.skills.a {
+    background: rgb(83, 83, 4);
+}
+.skills.b {
+    background: rgb(5, 70, 70);
+}
+.skills.c {
+    background: rgb(69, 13, 106);
+}
+.skills.d {
+    background: rgb(91, 7, 6);
+}
+
+@media (min-width: 620px) {
+    body {
+        
+    }
+    .App {
+        margin: 0 auto;
+        display: flex;
+        max-width: 1200px;
+    }
+    .profilePage {
+        width: 40%;
+    }
+    .formPage {
+        width: 60%;
+    }
 }
